fix double scrollbar #34

--- a/src/styles/main/_category.scss
+++ b/src/styles/main/_category.scss
@@ -22,16 +22,13 @@
     top: 0;
     left: -999999px;
     padding-bottom: 5px;
-    height: em(306);
+    max-height: em(306);
     max-width: 11em;
-    overflow-y: scroll;
     overflow-x: hidden;
   }
 
   .categories-wrapper {
-    overflow-y: scroll;
     position: relative;
-    height: 100%;
   }
 
   ul {
